[metadata]
name = katsdpbase
description = scaffold for contimh
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpBASE@ska.ac.za
url = https://github.com/ska-sa/katsdpBASE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    astropy
    numba
    numpy
    scipy
    typing_extensions
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
